# ScriptGuardianAI

./: README.md  guardian_batch_report.xlsx  guardian_batch_report1.xlsx  guardian_batch_report2.xlsx  index.html  main.py  pyproject.toml  requirements.txt  test.py
db/: chroma.sqlite3
src/: README.md
src/embeding/: DataEmbed.py
src/huggingface/: bot.py
src/lm/: Guardian.py  MultiChat.py
src/lm/utils/: CopilotChat.py  (+6 more)
src/lm_bot/: ScanBeeCode.py  check.py  checkChanged.py  checkForDirectory.py  checkLM.py
src/ollama/: Guardian.py  Ollama.py  ScanBee.py  ScanBeeCode.py  ScanBee_old1.py  ScanBee_old2.py  ScanBee_old3.py
src/scaningbee.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/train/: TestTrainedModel.py  dataset.jsonl  download.py  scanbee_full_dataset.jsonl  train.py
static/: index.html  index1.html  index2.html  index3.html  index4.html  index5.html
tests/: test.ps1  test2.groovy  test_end_to_end.py
tests/powershell/: TestWinRM_00.ps1  Test_SQLLDAP_01.ps1  scanbee_script_006.ps1  scanbee_script_012.ps1  scanbee_script_013.ps1  scanbee_script_016.ps1  scanbee_script_035.ps1  scanbee_script_039.ps1  scanbee_script_042.ps1  scanbee_script_048.ps1  scanbee_script_053.ps1  scanbee_script_064.ps1  scanbee_script_066.ps1  scanbee_script_071.ps1  scanbee_script_076.ps1  scanbee_script_084.ps1  scanbee_script_088.ps1  scanbee_script_090.ps1  scanbee_script_095.ps1  scanbee_script_096.ps1  scanbee_script_100.ps1  script_01.ps1  script_02.ps1  script_03.ps1  script_04.ps1  script_05.ps1  script_07.ps1  script_08.ps1  script_09.ps1
(+130 files in other folders)
